fixed hero section on mobile, removed space above employee section header on mobile, made the hamburger menu opacity layer and added click listener to it to to close the menu, made hamburger menu button animation

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,9 @@
   --dsb-yellow: #fbc667;
   --dsb-ebWhite: #e6e6e6;
 
+  --color-base-1: #777;
+  --color-base-2: #2e2e2e;
+
   /* margins */
   --margin-xs: 1.25rem;
   --margin-small: 2.5rem;
@@ -170,10 +173,61 @@ button {
 }
 
 #navbarButton {
-  transition: var(--transition-time);
-
   display: none;
-  margin: var(--margin-xs);
+  position: absolute;
+  top: 50%;
+  left: 85%;
+  transform: translate(-50%, -50%);
+  height: 75%;
+  width: 3rem;
+}
+
+#navbarButton:hover {
+  cursor: pointer;
+}
+
+#navbarButton span {
+  background: white;
+  transform: translateY(-50%) rotate(0deg);
+  position: absolute;
+  width: 100%;
+  height: 10%;
+  right: 0%;
+  transition: top 0.1s ease 0.3s, transform 0.3s ease, background 0.1s ease 0.3s;
+}
+
+#navbarButton.clicked span {
+  transition: top 0.1s ease, transform 0.3s ease 0.1s, background 0.1s ease;
+}
+
+#navbarButton span:nth-child(1) {
+  top: 10%;
+}
+
+#navbarButton span:nth-child(2) {
+  top: 50%;
+}
+
+#navbarButton span:nth-child(3) {
+  top: 90%;
+}
+
+#navbarButton.clicked span:nth-child(1) {
+  top: 50%;
+  transform: translateY(-50%) rotate(315deg);
+}
+
+#navbarButton.clicked span:nth-child(2) {
+  transform: translateY(-50%) rotate(405deg);
+}
+
+#navbarButton.clicked span:nth-child(3) {
+  top: 50%;
+  transform: translateY(-50%) rotate(405deg);
+}
+
+#mainMenuContainer {
+  display: none;
 }
 
 #mainMenu {
@@ -184,6 +238,10 @@ button {
   display: none;
 }
 .mainMenuListLink {
+  display: none;
+}
+
+#mainMenuOpacityLayer {
   display: none;
 }
 
@@ -822,20 +880,14 @@ button {
     justify-content: flex-end;
   }
   #aboutUsTextBox {
-    height: 30rem;
-    width: 100%;
-    border: none;
-    box-shadow: none;
-  }
-
-  #aboutUsTextContainer {
-  }
-
-  #aboutUsTextBox {
     align-items: center;
     justify-content: center;
+    border: none;
     border-top: 10px solid white;
     border-bottom: 10px solid white;
+    height: 30rem;
+    width: 100%;
+    box-shadow: none;
   }
 
   #aboutUsNormalTextContainer {
@@ -892,6 +944,10 @@ button {
     margin-bottom: 3rem;
   }
   /* Employees Section */
+
+  #employeeSectionHeaderContainer {
+    margin-top: 0rem;
+  }
 }
 /* --------------800px-------------- */
 
@@ -974,20 +1030,23 @@ button {
   }
 
   #mainMenu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 100vh;
     background-color: var(--dsb-white);
     position: absolute;
     right: 0;
-    width: 15rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    display: none;
+    min-width: 15rem;
+    width: 75%;
     z-index: 10;
   }
 
-  #mainMenuBackgroundColor {
-    background-color: rgb(0, 0, 0, 0.5);
+  #mainMenuOpacityLayer {
+    display: flex;
+    width: 25%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
   }
 
   .mainMenuListItem {
@@ -1011,7 +1070,8 @@ button {
   /* HERO SECTION */
 
   #heroSection {
-    height: 50rem;
+    height: auto;
+    background-image: none;
   }
 
   #heroSectionContent {
@@ -1021,6 +1081,7 @@ button {
     height: 30rem;
     margin: 0;
     margin-top: 3rem;
+    border: none;
   }
 
   #aboutUsTextContainer {
@@ -1044,7 +1105,7 @@ button {
 
   #employeeSectionHeader {
     width: 20rem;
-    rotate: 16deg;
+    rotate: 16.3deg;
   }
 
   /* banzaiman Section */
